-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.17.0
-
3
-
9223372036854775807
________________________________________________________________________________________________________
*** CID 457079: (RESOURCE_LEAK)
/lustre/utils/gss/context_lucid.c: 546 in prepare_krb5_rfc4121_buffer()
540 }
541 buf->length = 0;
542 if (enc_key.data) {
543 free(enc_key.data);
544 enc_key.data = NULL;
545 }
CID 457079: (RESOURCE_LEAK)
Variable "derived_key" going out of scope leaks the storage "derived_key.data" points to.
546 return -1;
547 }
548 int
549 serialize_krb5_ctx(gss_ctx_id_t *ctx, gss_buffer_desc *buf)
550 {
551 OM_uint32 maj_stat, min_stat;
- is related to
-
LU-18256 Introduce support for ENCTYPE_AES256_CTS_HMAC_SHA384_192
-
- Resolved
-